# ora-core

./: .gitignore  Cargo.toml
src/: domain.rs  error.rs  lib.rs  search.rs  shelf.rs
src/search/: index.rs  mod.rs  query.rs
src/shelf/: manager.rs  mod.rs  storage.rs
src/watcher/: debounce.rs  event.rs  handler.rs  index.rs  mod.rs  service.rs  watcher.rs
tests/: domain_integration.rs  index_integration.rs  local_manager_integration.rs  query_integration.rs  shelf_integration.rs  storage_integration.rs  watcher_integration.rs
