[package]
name = "rough-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"]}
tempfile = "3.23.0"
thiserror = "2.0.16"
uuid = {version = "1.18.1", features = ["v4"]}
tokio = {version = "1.0", features = ["full"]}
